--- a/04_utils.ipynb
+++ b/04_utils.ipynb
@@ -276,6 +276,16 @@
     "        else:\n",
     "            valKey.add(value)\n",
     "\n",
+    "        self[key] = list(valKey)\n",
+    "    \n",
+    "    def remove(self,key,value):\n",
+    "        valKey = set(self.setdefault(key,[]))\n",
+    "        \n",
+    "        if isinstance(value,Iterable):\n",
+    "            valKey.difference_update(value)\n",
+    "        else:\n",
+    "            valKey.remove(value)\n",
+    "        \n",
     "        self[key] = list(valKey)"
    ]
   },
@@ -412,8 +422,8 @@
     "        to two sorted sets, if number of added elements are not equal, DataError is raised.\n",
     "        \n",
     "    '''\n",
-    "    starts = {n:inv[0] for n,inv in intervalMapping.items()}\n",
-    "    ends = {n:inv[1] for n,inv in intervalMapping.items()}\n",
+    "    starts = {f'{n}_{seqnum}':interval[0] for n,inv in intervalMapping.items() for seqnum,interval in enumerate(inv)}\n",
+    "    ends = {f'{n}_{seqnum}':interval[1] for n,inv in intervalMapping.items() for seqnum,interval in enumerate(inv)}\n",
     "    numAddedStarts = r.zadd(f'{name}Start',mapping=starts)\n",
     "    numAddedEnds = r.zadd(f'{name}End',mapping=ends)\n",
     "    if numAddedStarts!=numAddedEnds:\n",
@@ -489,7 +499,7 @@
     "#     r.execute_command('ZRANGESTORE',*['endSetTemp','geneEnd',start,'inf','BYSCORE'])\n",
     "    r.zrangestore(f'startSetTemp_{tid}',f'{name}Start','-inf',_endPos,byScore=True)\n",
     "    r.zrangestore(f'endSetTemp_{tid}',f'{name}End',start,'inf',byScore=True)\n",
-    "    res = [el.decode() for el in r.zinter([f'startSetTemp_{tid}',f'endSetTemp_{tid}'])]\n",
+    "    res = [el.decode().split('_')[0] for el in r.zinter([f'startSetTemp_{tid}',f'endSetTemp_{tid}'])]\n",
     "    r.delete(f'startSetTemp_{tid}',f'endSetTemp_{tid}')\n",
     "    return res"
    ]
