Minor bug fixes in Tremaux tree construction

--- a/02_tree.ipynb
+++ b/02_tree.ipynb
@@ -63,6 +63,7 @@
    "source": [
     "#exporti\n",
     "import numpy as np\n",
+    "from copy import deepcopy\n",
     "\n",
     "import pdb\n",
     "\n",
@@ -215,19 +216,18 @@
     "#         else:\n",
     "#             raise ValueError(\"Something went wrong. I cannot find a single suitable starting node. It seems there is no nodes in the graph.\")\n",
     "        \n",
-    "        for tree in nx.weakly_connected_components(tremauxTree):\n",
-    "            subgraphNode = tree.pop()\n",
+    "        for treeNum,tree in enumerate(nx.weakly_connected_components(tremauxTree)):\n",
+    "            subgraphNode = next(iter(tree))\n",
     "            while True:\n",
     "                treeInEdges = list(tremauxTree.in_edges(subgraphNode))\n",
     "                if len(treeInEdges)>0:\n",
     "                    subgraphNode = treeInEdges[0][0]\n",
-    "                    pass\n",
     "                else:\n",
     "                    break\n",
     "            self.startingNodes.append(subgraphNode)\n",
     "                \n",
-    "        self.startingNodes.sort(key=lambda node: self.parentGraph.nodePassUnique[node-1])\n",
-    "    \n",
+    "        self.startingNodes.sort(key=lambda node: self.parentGraph._getEdgeValue(None,node))\n",
+    "        \n",
     "        return tremauxTree\n",
     "    \n",
     "    # unused\n",
@@ -236,10 +236,12 @@
     "        \n",
     "        dfsNodeOrder = list(nx.dfs_preorder_nodes(treeCombined))\n",
     "        \n",
-    "        for node in dfsNodeOrder:\n",
+    "        for nodeNum,node in enumerate(dfsNodeOrder):\n",
     "#             if node==4006:\n",
     "#                 pdb.set_trace()\n",
-    "                \n",
+    "            \n",
+    "            print(f'\\nPreprocessing tree {(nodeNum+1)/len(dfsNodeOrder)*100:0.0f}%',end='')\n",
+    "    \n",
     "            processedNodes.append(node)\n",
     "\n",
     "            # get all edges coming to given node in the full graph\n",
@@ -275,21 +277,25 @@
     "            for edgeToKeepInd in graphInEdgeValueSortIndex:\n",
     "                # Find the edge with maximum number of paths passing\n",
     "                edgeToKeep = graphInEdgeList[edgeToKeepInd]\n",
+    "                \n",
+    "                if edgeToKeep[0]==edgeToKeep[1]:\n",
+    "                    raise RuntimeError(f'Self loop on node {edge[0]} is suggested for substitution.')\n",
+    "                \n",
     "                edgeToKeepValue = graphInEdgeValueList[edgeToKeepInd]\n",
     "                if nx.has_path(treeCombined,edgeToKeep[1],edgeToKeep[0]):\n",
-    "                    print(f'Node: {node}')\n",
-    "                    print(f'Graph edges: {graphInEdgeList}')\n",
-    "                    print(f'Tree edge: {treeInEdgeList}')\n",
-    "                    print(f'Edge to keep: {edgeToKeep}')\n",
+    "#                     print(f'Node: {node}')\n",
+    "#                     print(f'Graph edges: {graphInEdgeList}')\n",
+    "#                     print(f'Tree edge: {treeInEdgeList}')\n",
+    "#                     print(f'Edge to keep: {edgeToKeep}')\n",
     "\n",
-    "                    print('Cycle found!')\n",
+    "#                     print('Cycle found!')\n",
     "                    # Get all posible cycle path:\n",
     "                    edgesToRemove = []\n",
     "                    edgesToAdd = []\n",
     "                    breakSubstitute = False\n",
     "\n",
     "                    for path in nx.all_shortest_paths(treeCombined,edgeToKeep[1],edgeToKeep[0]):\n",
-    "                        print(f'Path to break: {path}')\n",
+    "#                         print(f'Path to break: {path}')\n",
     "                        if len(path)==2 and list(edgeToKeep[::-1])==path:\n",
     "                            if path[1] not in processedNodes:\n",
     "                                edgesToRemove.append(path)\n",
@@ -302,15 +308,15 @@
     "                                edgesToRemove.append(pathBreakpoint[0])\n",
     "                                edgesToAdd.append(pathBreakpoint[1])\n",
     "                            else:\n",
-    "                                print('Unbreakable path!')\n",
+    "#                                 print('Unbreakable path!')\n",
     "                                breakSubstitute = True\n",
     "                                break\n",
     "\n",
     "                    if not breakSubstitute:\n",
-    "                        print('Edge substituted!')\n",
+    "#                         print('Edge substituted!')\n",
     "                        self._substituteEdges(treeCombined,[edgeToKeep],treeInEdgeList)\n",
     "#                             for edgeToRemove,edgeToAdd in zip(edgesToRemove,edgesToAdd):\n",
-    "                        print(f'Edges {edgesToAdd} added instead of {edgesToRemove}')\n",
+    "#                         print(f'Edges {edgesToAdd} added instead of {edgesToRemove}')\n",
     "                        self._substituteEdges(treeCombined,edgesToAdd,edgesToRemove)\n",
     "                        break\n",
     "                    else:\n",
@@ -318,7 +324,7 @@
     "                else:\n",
     "                    self._substituteEdges(treeCombined,[edgeToKeep],treeInEdgeList)\n",
     "                    break\n",
-    "    \n",
+    "        print()\n",
     "    #unused\n",
     "    def _severePathPoint(self,G,path,newEdgeValue,processedNodes):\n",
     "        '''\n",
@@ -388,6 +394,9 @@
     "                altEdge = allIncomingEdges[edgeInd]\n",
     "                altEdgeValue = incomingEdgesValue[edgeInd]\n",
     "                # We consider only substitutions\n",
+    "                if altEdge[0]==altEdge[1]:\n",
+    "                    continue\n",
+    "                    \n",
     "                if altEdge == curEdge:\n",
     "#                     if curEdgeValue>newEdgeValue:\n",
     "#                         break\n",
@@ -515,7 +524,7 @@
     "    def draw_original(self):\n",
     "        nx.draw(self.originalGraph,pos=nx.kamada_kawai_layout(self.originalGraph),with_labels=True)\n",
     "    def getRootNodes(self):\n",
-    "        return self.startingNodes\n",
+    "        return deepcopy(self.startingNodes)\n",
     "#         inCond = dict([(node,in_degree==0) for node,in_degree in self.in_degree])\n",
     "\n",
     "#         outCond = dict([(node,in_degree!=0) for node,in_degree in self.out_degree])\n",
