--- a/04_utils.ipynb
+++ b/04_utils.ipynb
@@ -44,7 +44,9 @@
       "Converted 03_synteny.ipynb.\n",
       "Converted 04_utils.ipynb.\n",
       "Converted 05_export.ipynb.\n",
+      "Converted 05_exportDev.ipynb.\n",
       "Converted deBruijnGraphProcessing.ipynb.\n",
+      "Converted dev.ipynb.\n",
       "Converted graphTesting.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
@@ -76,217 +78,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#export\n",
-    "def getDBID(pathToDictFile,caseName):\n",
-    "    dbid = None\n",
-    "    if os.path.exists(pathToDictFile):\n",
-    "        caseToDBID = joblib.load(pathToDictFile)\n",
-    "    else:\n",
-    "        caseToDBID = {caseName:0}\n",
-    "        dbid = 0\n",
-    "\n",
-    "    dbid = caseToDBID.get(caseName,None)\n",
-    "\n",
-    "    if dbid is None:\n",
-    "        dbidArray = sorted(list(caseToDBID.values()))\n",
-    "        if dbidArray[0]>0:\n",
-    "            dbid = 0\n",
-    "        else:\n",
-    "            prevID = 0\n",
-    "            if len(dbidArray)>1:\n",
-    "                for curID in dbidArray[1:]:\n",
-    "                    if prevID + 1 < curID:\n",
-    "                        break\n",
-    "                    prevID = curID\n",
-    "            dbid = prevID + 1\n",
-    "        caseToDBID[caseName] = dbid\n",
-    "\n",
-    "    joblib.dump(caseToDBID,pathToDictFile)\n",
-    "\n",
-    "    return dbid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "def resetDB(pathToDictFile,redisServer='redis',port=6379):\n",
-    "    os.remove(pathToDictFile)\n",
-    "    conn = Redis(host=redisServer,port=port,db=0)\n",
-    "    conn.flushall()\n",
-    "    return 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "def pathConvert(inputPath, suffix=''):\n",
-    "    outputPath = os.path.dirname(inputPath)\n",
-    "    outputName = '.'.join(os.path.splitext(os.path.basename(inputPath))[:-1])+suffix\n",
-    "    return outputPath,outputName"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "def checkZoomLevels(zoomLevels):\n",
-    "    '''\n",
-    "    Check that each previous zoom level is factor of next one\n",
-    "    '''\n",
-    "    _zoomLevels = np.array(zoomLevels)\n",
-    "    div = _zoomLevels[1:]/_zoomLevels[:-1]\n",
-    "    return not np.any(div - div.astype(np.int))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "def adjustZoomLevels(zoomLevels):\n",
-    "    '''\n",
-    "    If there is no zoom level 1, adds it to the list.\n",
-    "    '''\n",
-    "    if not checkZoomLevels(zoomLevels):\n",
-    "        raise ValueError('Zoom level list is incorrect. Each next level \\\n",
-    "                          should have previous one as factor.')\n",
-    "    if min(zoomLevels) > 1:\n",
-    "        zoomLevels = [1] + zoomLevels\n",
-    "    return zoomLevels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "# https://stackoverflow.com/questions/50916422/python-typeerror-object-of-type-int64-is-not-json-serializable\n",
-    "# Class for encoding np types to JSON\n",
-    "class NpEncoder(json.JSONEncoder):\n",
-    "    def default(self, obj):\n",
-    "        if isinstance(obj, np.integer):\n",
-    "            return int(obj)\n",
-    "        elif isinstance(obj, np.floating):\n",
-    "            return float(obj)\n",
-    "        elif isinstance(obj, np.ndarray):\n",
-    "            return obj.tolist()\n",
-    "        elif isinstance(obj, set):\n",
-    "            return list(obj)\n",
-    "        else:\n",
-    "            return super(NpEncoder, self).default(obj)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "class bidict(dict):\n",
-    "    '''\n",
-    "    Here is a class for a bidirectional dict, inspired by Finding key from\n",
-    "    value in Python dictionary and modified to allow the following 2) and 3).\n",
-    "\n",
-    "    Note that :\n",
-    "\n",
-    "    1) The inverse directory bd.inverse auto-updates itself when the standard\n",
-    "        dict bd is modified.\n",
-    "    2) The inverse directory bd.inverse[value] is always a list of keys such\n",
-    "        that value in bd[key] for each key.\n",
-    "    3) Unlike the bidict module from https://pypi.python.org/pypi/bidict,\n",
-    "        here we can have 2 keys having same value, this is very important.\n",
-    "    4) After modification, values in the \"forward\" (not inversed) dict\n",
-    "        can be lists (or any iterables theoretically,\n",
-    "        but only list was tested).\n",
-    "\n",
-    "    For implementing 4), new method `add` was introduced.\n",
-    "    If d[key].append(value) attempted, the link between main and inversed dict\n",
-    "    will be broken. Method `add` can accept both\n",
-    "\n",
-    "    Credit:\n",
-    "    Implemented as an answer to\n",
-    "    https://stackoverflow.com/questions/3318625/how-to-implement-an-efficient-bidirectional-hash-table\n",
-    "    by Basj (https://stackoverflow.com/users/1422096/basj).\n",
-    "    '''\n",
-    "\n",
-    "    def __init__(self, *args, **kwargs):\n",
-    "        super().__init__(*args, **kwargs)\n",
-    "        self.inverse = {}\n",
-    "        for key, value in self.items():\n",
-    "            if isinstance(value, Iterable):\n",
-    "                for v in value:\n",
-    "                    self.inverse.setdefault(v, []).append(key)\n",
-    "            else:\n",
-    "                self.inverse.setdefault(value, []).append(key)\n",
-    "\n",
-    "    def __setitem__(self, key, value):\n",
-    "        if key in self:\n",
-    "            keyV = self[key]\n",
-    "            if isinstance(keyV, Iterable):\n",
-    "                for v in keyV:\n",
-    "                    self.inverse[v].remove(key)\n",
-    "            else:\n",
-    "                self.inverse[keyV].remove(key)\n",
-    "        super(bidict, self).__setitem__(key, value)\n",
-    "        if isinstance(value, Iterable):\n",
-    "            for v in value:\n",
-    "                self.inverse.setdefault(v, []).append(key)\n",
-    "        else:\n",
-    "            self.inverse.setdefault(value, []).append(key)\n",
-    "\n",
-    "    def __delitem__(self, key):\n",
-    "        value = self[key]\n",
-    "        if isinstance(value, Iterable):\n",
-    "            for v in value:\n",
-    "                self.inverse.setdefault(v, []).remove(key)\n",
-    "                if v in self.inverse and not self.inverse[v]:\n",
-    "                    del self.inverse[v]\n",
-    "        else:\n",
-    "            self.inverse.setdefault(value, []).remove(key)\n",
-    "            if value in self.inverse and not self.inverse[value]:\n",
-    "                del self.inverse[value]\n",
-    "        super(bidict, self).__delitem__(key)\n",
-    "\n",
-    "    def add(self, key, value):\n",
-    "        valKey = set(self.setdefault(key, []))\n",
-    "\n",
-    "        if isinstance(value, Iterable):\n",
-    "            valKey = valKey.union(value)\n",
-    "        else:\n",
-    "            valKey.add(value)\n",
-    "\n",
-    "        self[key] = list(valKey)\n",
-    "    \n",
-    "    def remove(self,key,value):\n",
-    "        valKey = set(self.setdefault(key,[]))\n",
-    "        \n",
-    "        if isinstance(value,Iterable):\n",
-    "            valKey.difference_update(value)\n",
-    "        else:\n",
-    "            valKey.remove(value)\n",
-    "        \n",
-    "        self[key] = list(valKey)"
+    "## Path files operations"
    ]
   },
   {
@@ -396,7 +191,274 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Functions implementing secondary interval set in Redis database"
+    "## Export parameters processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def pathConvert(inputPath, suffix=''):\n",
+    "    outputPath = os.path.dirname(inputPath)\n",
+    "    outputName = '.'.join(os.path.splitext(os.path.basename(inputPath))[:-1])+suffix\n",
+    "    return outputPath,outputName"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def checkZoomLevels(zoomLevels):\n",
+    "    '''\n",
+    "    Check that each previous zoom level is factor of next one\n",
+    "    '''\n",
+    "    _zoomLevels = np.array(zoomLevels)\n",
+    "    div = _zoomLevels[1:]/_zoomLevels[:-1]\n",
+    "    return not np.any(div - div.astype(np.int))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def adjustZoomLevels(zoomLevels):\n",
+    "    '''\n",
+    "    If there is no zoom level 1, adds it to the list.\n",
+    "    '''\n",
+    "    if not checkZoomLevels(zoomLevels):\n",
+    "        raise ValueError('Zoom level list is incorrect. Each next level \\\n",
+    "                          should have previous one as factor.')\n",
+    "    if min(zoomLevels) > 1:\n",
+    "        zoomLevels = [1] + zoomLevels\n",
+    "    return zoomLevels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Utility classes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Numpy to JSON encoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "# https://stackoverflow.com/questions/50916422/python-typeerror-object-of-type-int64-is-not-json-serializable\n",
+    "# Class for encoding np types to JSON\n",
+    "class NpEncoder(json.JSONEncoder):\n",
+    "    def default(self, obj):\n",
+    "        if isinstance(obj, np.integer):\n",
+    "            return int(obj)\n",
+    "        elif isinstance(obj, np.floating):\n",
+    "            return float(obj)\n",
+    "        elif isinstance(obj, np.ndarray):\n",
+    "            return obj.tolist()\n",
+    "        elif isinstance(obj, set):\n",
+    "            return list(obj)\n",
+    "        else:\n",
+    "            return super(NpEncoder, self).default(obj)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bidirectional dict structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class bidict(dict):\n",
+    "    '''\n",
+    "    Here is a class for a bidirectional dict, inspired by Finding key from\n",
+    "    value in Python dictionary and modified to allow the following 2) and 3).\n",
+    "\n",
+    "    Note that :\n",
+    "\n",
+    "    1) The inverse directory bd.inverse auto-updates itself when the standard\n",
+    "        dict bd is modified.\n",
+    "    2) The inverse directory bd.inverse[value] is always a list of keys such\n",
+    "        that value in bd[key] for each key.\n",
+    "    3) Unlike the bidict module from https://pypi.python.org/pypi/bidict,\n",
+    "        here we can have 2 keys having same value, this is very important.\n",
+    "    4) After modification, values in the \"forward\" (not inversed) dict\n",
+    "        can be lists (or any iterables theoretically,\n",
+    "        but only list was tested).\n",
+    "\n",
+    "    For implementing 4), new method `add` was introduced.\n",
+    "    If d[key].append(value) attempted, the link between main and inversed dict\n",
+    "    will be broken. Method `add` can accept both\n",
+    "\n",
+    "    Credit:\n",
+    "    Implemented as an answer to\n",
+    "    https://stackoverflow.com/questions/3318625/how-to-implement-an-efficient-bidirectional-hash-table\n",
+    "    by Basj (https://stackoverflow.com/users/1422096/basj).\n",
+    "    '''\n",
+    "\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "        self.inverse = {}\n",
+    "        for key, value in self.items():\n",
+    "            if isinstance(value, Iterable):\n",
+    "                for v in value:\n",
+    "                    self.inverse.setdefault(v, []).append(key)\n",
+    "            else:\n",
+    "                self.inverse.setdefault(value, []).append(key)\n",
+    "\n",
+    "    def __setitem__(self, key, value):\n",
+    "        if key in self:\n",
+    "            keyV = self[key]\n",
+    "            if isinstance(keyV, Iterable):\n",
+    "                for v in keyV:\n",
+    "                    self.inverse[v].remove(key)\n",
+    "            else:\n",
+    "                self.inverse[keyV].remove(key)\n",
+    "        super(bidict, self).__setitem__(key, value)\n",
+    "        if isinstance(value, Iterable):\n",
+    "            for v in value:\n",
+    "                self.inverse.setdefault(v, []).append(key)\n",
+    "        else:\n",
+    "            self.inverse.setdefault(value, []).append(key)\n",
+    "\n",
+    "    def __delitem__(self, key):\n",
+    "        value = self[key]\n",
+    "        if isinstance(value, Iterable):\n",
+    "            for v in value:\n",
+    "                self.inverse.setdefault(v, []).remove(key)\n",
+    "                if v in self.inverse and not self.inverse[v]:\n",
+    "                    del self.inverse[v]\n",
+    "        else:\n",
+    "            self.inverse.setdefault(value, []).remove(key)\n",
+    "            if value in self.inverse and not self.inverse[value]:\n",
+    "                del self.inverse[value]\n",
+    "        super(bidict, self).__delitem__(key)\n",
+    "\n",
+    "    def add(self, key, value):\n",
+    "        valKey = self.setdefault(key, [])\n",
+    "        if isinstance(valKey,Iterable):\n",
+    "            valKey = set(valKey)\n",
+    "        else:\n",
+    "            valKey = set([valKey])\n",
+    "\n",
+    "        if isinstance(value, Iterable):\n",
+    "            valKey = valKey.union(value)\n",
+    "        else:\n",
+    "            valKey.add(value)\n",
+    "\n",
+    "        self[key] = list(valKey)\n",
+    "    \n",
+    "    def remove(self,key,value):\n",
+    "        valKey = set(self.setdefault(key,[]))\n",
+    "        \n",
+    "        if isinstance(value,Iterable):\n",
+    "            valKey.difference_update(value)\n",
+    "        else:\n",
+    "            valKey.remove(value)\n",
+    "        \n",
+    "        self[key] = list(valKey)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Redis utility"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DB mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def getDBID(pathToDictFile,caseName):\n",
+    "    dbid = None\n",
+    "    if os.path.exists(pathToDictFile):\n",
+    "        caseToDBID = joblib.load(pathToDictFile)\n",
+    "    else:\n",
+    "        caseToDBID = {caseName:0}\n",
+    "        dbid = 0\n",
+    "\n",
+    "    dbid = caseToDBID.get(caseName,None)\n",
+    "\n",
+    "    if dbid is None:\n",
+    "        dbidArray = sorted(list(caseToDBID.values()))\n",
+    "        if dbidArray[0]>0:\n",
+    "            dbid = 0\n",
+    "        else:\n",
+    "            prevID = 0\n",
+    "            if len(dbidArray)>1:\n",
+    "                for curID in dbidArray[1:]:\n",
+    "                    if prevID + 1 < curID:\n",
+    "                        break\n",
+    "                    prevID = curID\n",
+    "            dbid = prevID + 1\n",
+    "        caseToDBID[caseName] = dbid\n",
+    "\n",
+    "    joblib.dump(caseToDBID,pathToDictFile)\n",
+    "\n",
+    "    return dbid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DB cleaning and maintenance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def resetDB(pathToDictFile,redisServer='redis',port=6379):\n",
+    "    os.remove(pathToDictFile)\n",
+    "    conn = Redis(host=redisServer,port=port,db=0)\n",
+    "    conn.flushall()\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions implementing secondary interval set in Redis database"
    ]
   },
   {
