Moved annotation to external API and removed necessity to display gene names as nucleotides for gene graph

--- a/04_utils.ipynb
+++ b/04_utils.ipynb
@@ -484,8 +484,8 @@
     "        to two sorted sets, if number of added elements are not equal, DataError is raised.\n",
     "        \n",
     "    '''\n",
-    "    starts = {f'{n}_{seqnum}':interval[0] for n,inv in intervalMapping.items() for seqnum,interval in enumerate(inv)}\n",
-    "    ends = {f'{n}_{seqnum}':interval[1] for n,inv in intervalMapping.items() for seqnum,interval in enumerate(inv)}\n",
+    "    starts = {f'{n}_{seqnum}':int(interval[0]) for n,inv in intervalMapping.items() for seqnum,interval in enumerate(inv)}\n",
+    "    ends = {f'{n}_{seqnum}':int(interval[1]) for n,inv in intervalMapping.items() for seqnum,interval in enumerate(inv)}\n",
     "    numAddedStarts = r.zadd(f'{name}Start',mapping=starts)\n",
     "    numAddedEnds = r.zadd(f'{name}End',mapping=ends)\n",
     "    if numAddedStarts!=numAddedEnds:\n",
@@ -561,7 +561,7 @@
     "#     r.execute_command('ZRANGESTORE',*['endSetTemp','geneEnd',start,'inf','BYSCORE'])\n",
     "    r.zrangestore(f'startSetTemp_{tid}',f'{name}Start','-inf',_endPos,byScore=True)\n",
     "    r.zrangestore(f'endSetTemp_{tid}',f'{name}End',start,'inf',byScore=True)\n",
-    "    res = [el.decode().split('_')[0] for el in r.zinter([f'startSetTemp_{tid}',f'endSetTemp_{tid}'])]\n",
+    "    res = ['_'.join(el.decode().split('_')[:-1]) for el in r.zinter([f'startSetTemp_{tid}',f'endSetTemp_{tid}'])]\n",
     "    r.delete(f'startSetTemp_{tid}',f'endSetTemp_{tid}')\n",
     "    return res"
    ]
@@ -906,7 +906,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
