--- a/01_graph.ipynb
+++ b/01_graph.ipynb
@@ -139,7 +139,7 @@
     "    for nodeIdx in range(numNodes):\n",
     "        print(f'\\nProcessing node {nodeIdx+1:0{numNodesDigits}}/{numNodes:0{numNodesDigits}}',end='')\n",
     "        if graph.nodesData[nodeIdx]=='':\n",
-    "            nodeLengths[nodeIdx] = len(graph.nodes[nodeIdx])\n",
+    "            nodeLengths[nodeIdx] = 1#len(graph.nodes[nodeIdx])\n",
     "        else:\n",
     "            nodeLengths[nodeIdx] = len(graph.nodesData[nodeIdx])\n",
     "    \n",
@@ -899,15 +899,23 @@
    "outputs": [],
    "source": [
     "#export    \n",
-    "    def _getNodeID(self,node,maxNodeNameLength,pathID):\n",
-    "        _node = node.zfill(maxNodeNameLength)\n",
+    "    def _getNodeID(self,node,pathID,nodeNameLengths=None):\n",
     "        try:\n",
-    "            nodeID = self.nodes.index(_node)+1\n",
-    "            self.nodesAnnotation[nodeID-1].setdefault(pathID,{}).setdefault(_node,[]).append((0,len(_node)-1))\n",
+    "            nodeID = self.nodes.index(node)+1\n",
+    "            if nodeNameLengths is not None:\n",
+    "                nodeLength = nodeNameLengths[nodeID]\n",
+    "            else:\n",
+    "                nodeLength = 1\n",
+    "            self.nodesAnnotation[nodeID-1].setdefault(pathID, {}).setdefault(node, []).append((0, nodeLength - 1))\n",
     "        except ValueError:\n",
-    "            self.nodes.append(_node)\n",
-    "            self.nodesAnnotation.append({pathID:{_node:[(0,len(_node)-1)]}})\n",
+    "            self.nodes.append(node)\n",
     "            nodeID = len(self.nodes)\n",
+    "            if nodeNameLengths is not None:\n",
+    "                nodeLength = nodeNameLengths[nodeID]\n",
+    "            else:\n",
+    "                nodeLength = 1\n",
+    "            self.nodesAnnotation.append({pathID:{node:[(0,nodeLength - 1)]}})\n",
+    "            \n",
     "            self.nodeNameToID[str(nodeID)] = nodeID\n",
     "            \n",
     "        return nodeID"
@@ -920,7 +928,7 @@
    "outputs": [],
    "source": [
     "#export    \n",
-    "    def _graphFromPaths(self,paths,sequenceFiles=None,nodeNameLength=None):\n",
+    "    def _graphFromPaths(self,paths,sequenceFiles=None,nodeNameLengths=None):\n",
     "        if sequenceFiles is not None:\n",
     "            warnings.warn(\"sequenceFiles reading with path is not yet implemented.\")\n",
     "        \n",
@@ -928,10 +936,10 @@
     "            raise ValueError(f\"paths should be dict but {type(paths)} was given.\")\n",
     "        \n",
     "#         if sequenceFiles is None:\n",
-    "        if nodeNameLength is None:\n",
-    "            maxNodeNameLength = len(max([max(path,key=lambda a: len(a)) for path in paths.values()],key=lambda a: len(a))) - 1\n",
-    "        else:\n",
-    "            maxNodeNameLength = nodeNameLength\n",
+    "        # if nodeNameLength is None:\n",
+    "        #     maxNodeNameLength = len(max([max(path,key=lambda a: len(a)) for path in paths.values()],key=lambda a: len(a))) - 1\n",
+    "        # else:\n",
+    "        #     maxNodeNameLength = nodeNameLength\n",
     "        \n",
     "        self.nodeNameToID = {}\n",
     "        self.nodes = []\n",
@@ -945,14 +953,14 @@
     "            self.accessions.append(pathID)\n",
     "            prevNode = path[0][:-1]\n",
     "            prevDirection = path[0][-1]\n",
-    "            prevNodeID = self._getNodeID(prevNode,maxNodeNameLength,pathID)\n",
+    "            prevNodeID = self._getNodeID(prevNode,pathID,nodeNameLengths)\n",
     "            newPath = [f'{prevNodeID}{prevDirection}']\n",
     "            for nodeDir in path[1:]:\n",
     "                \n",
     "                node = nodeDir[:-1]\n",
     "                direction = nodeDir[-1]\n",
     "                \n",
-    "                nodeID = self._getNodeID(node,maxNodeNameLength,pathID)\n",
+    "                nodeID = self._getNodeID(node,pathID,nodeNameLengths)\n",
     "                newPath.append(f'{nodeID}{direction}')\n",
     "                links.setdefault(prevNodeID,{}).setdefault(prevDirection,set()).add((nodeID,direction))\n",
     "                \n",
