Adding wider metadata (including positions) for gene graph from generation to export.

--- a/01_graph.ipynb
+++ b/01_graph.ipynb
@@ -598,21 +598,24 @@
     "                         If None, it will run all sequences in each annotation in lexicographic order\n",
     "                         and join them together (e.g. end of chr1 will be joined to start of chr2).\n",
     "            `refAccession`: str or None (default). Optional accession ID for reference annotation (if not the same as the file name).\n",
-    "        \n",
+    "\n",
     "        '''\n",
     "        self.nodes = []\n",
     "        self.nodesData = []\n",
-    "        self.nodesAnnotation = []\n",
-    "        self.nodesChr = []\n",
+    "        # self.node = []\n",
+    "        self.nodesMetadata = []\n",
+    "        '''\n",
+    "        \n",
+    "        '''\n",
     "        self.forwardLinks = {}\n",
     "        self.overlaps = {}\n",
     "        self.paths = []\n",
     "        self.accessions = []\n",
     "        self._nxGraph = None\n",
     "        self.tremauxTree = None\n",
-    "        \n",
+    "\n",
     "        self.isBack = doBack\n",
-    "        \n",
+    "\n",
     "        if gfaPath is not None:\n",
     "            self._loadGFA(gfaPath,isGFASeq=kwargs.get('isGFASeq',True),accessionsToRemove=kwargs.get('accessionsToRemove',None))\n",
     "        elif nodes is not None and links is not None and paths is not None:\n",
