--- a/03_synteny.ipynb
+++ b/03_synteny.ipynb
@@ -163,7 +163,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
+    "def getChromosomeFromSeqID(seqID):\n",
+    "    # This function should be modified if chromosome is encoded differently in gff3 file.\n",
+    "    return seqID.split('_')[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "def processAccession(annotationFile, sequenceFile=None,\n",
     "                     ATmap=None, isRef=False, accID=None):\n",
     "    if accID is None:\n",
@@ -211,9 +223,9 @@
     "            if isRef:\n",
     "                pass\n",
     "            overlaps = getIDs(annotation.query(bounds=[(start,end)],metadata={'type':'gene'}))\n",
-    "            genes.append([geneID,orthogroup,seqID,accessionID,forward,start,end,atNamesStr,geneSeq,overlaps])\n",
+    "            genes.append([geneID,orthogroup,seqID,accessionID,getChromosomeFromSeqID(seqID),forward,start+1,end,atNamesStr,geneSeq,overlaps])\n",
     "    \n",
-    "    genes = pd.DataFrame(genes,columns=['geneID','orthogroup','sequenceID','accessionID','forward','start','end','AT_str','geneSeq','overlapGenes'])\n",
+    "    genes = pd.DataFrame(genes,columns=['geneID','orthogroup','sequenceID','accessionID','chromosome','forward','start','end','AT_str','geneSeq','overlapGenes'])\n",
     "    genes.sort_values(by=['sequenceID','start'],inplace=True)\n",
     "        \n",
     "    return accessionID,genes,sequenceDict"
@@ -249,19 +261,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
-    "def recordAnnotation(nodeID,accessionID,sequenceID,og,atList,nodesAnnotation,nodesChr):\n",
-    "    if len(nodesAnnotation)==nodeID-1:\n",
-    "        nodesAnnotation.append({})\n",
-    "        \n",
-    "    nodesAnnotation[nodeID-1].setdefault(accessionID,{})[og] = [(0,len(og)-1)]\n",
-    "    for at in atList:\n",
-    "        nodesAnnotation[nodeID-1].setdefault(accessionID,{})[at] = [(0,len(at)-1)]\n",
-    "    \n",
-    "    if len(nodesChr)==nodeID-1:\n",
-    "        nodesChr.append({})\n",
-    "        \n",
-    "    nodesChr[nodeID-1].setdefault(accessionID,[]).append(sequenceID)"
+    "#| export\n",
+    "def recordAnnotation(nodeID,accessionID,sequenceID,chrID,start,end,og,atList,sequence,nodesMetadata):\n",
+    "    # if len(nodesAnnotation)==nodeID-1:\n",
+    "    #     nodesAnnotation.append({})\n",
+    "\n",
+    "    if len(nodesMetadata)==nodeID-1:\n",
+    "        nodesMetadata.append({})\n",
+    "\n",
+    "    geneLen = 1\n",
+    "    if len(sequence)>0:\n",
+    "        geneLen = len(sequence)\n",
+    "\n",
+    "    # nodesAnnotation[nodeID-1].setdefault(accessionID,{})[og] = [(0,geneLen-1)]#[(0,len(og)-1)]\n",
+    "    # for at in atList:\n",
+    "    #     nodesAnnotation[nodeID-1].setdefault(accessionID,{})[at] = [(0,geneLen-1)]#[(0,len(at)-1)]\n",
+    "\n",
+    "    nodesMetadata[nodeID-1].setdefault(accessionID, {}).setdefault('genPos',[]).append({'chr':chrID, 'genomePosition':[start,end]})\n",
+    "    nodesMetadata[nodeID-1][accessionID].setdefault('annotation',{}).update({og: [(0,geneLen-1)]})\n",
+    "    nodesMetadata[nodeID-1][accessionID]['annotation'].update({at:[(0,geneLen-1)] for at in atList})"
    ]
   },
   {
@@ -270,7 +288,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
+    "def recordAltChr(nodeID,accessionID,chrID,start,end,nodesMetadata):\n",
+    "    nodesMetadata[nodeID-1][accessionID].setdefault('altChrGenPos',[]).append({'chr':chrID, 'genomePosition':[start,end]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "def addLink(links,prevPathSegment,name,forward):\n",
     "    '''\n",
     "    `links`: mutable\n",
@@ -278,7 +307,7 @@
     "    '''\n",
     "    if prevPathSegment is not None:\n",
     "        links[prevPathSegment].add(f'{name}\\t{\"+\" if forward else \"-\"}')\n",
-    "    return f'{name}\\t{\"+\" if forward else \"-\"}'\n"
+    "    return f'{name}\\t{\"+\" if forward else \"-\"}'"
    ]
   },
   {
@@ -287,10 +316,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
-    "def generatePathsLinks(genes,sequenceID,accessionID,\n",
+    "#| export\n",
+    "def generatePathsLinks(genesAll,sequenceID,accessionID,\n",
     "                       sequences,OGList,segmentIDs,\n",
-    "                       nodeAnnotation,nodesChr,\n",
+    "                       nodesMetadata,\n",
     "                       segmentIDToNumDict,links,usCounter,\n",
     "                       doUS=True,segmentData=None,gfaFile=None):\n",
     "    '''\n",
@@ -300,40 +329,42 @@
     "    `usCounter`: mutable\n",
     "    \n",
     "    '''\n",
+    "    genes = genesAll.loc[genesAll.sequenceID == sequenceID]\n",
     "    path = []\n",
     "    cigar = []\n",
     "    prevEnd = 0\n",
     "    prevPathSegment = None\n",
     "    curSeqID = ''\n",
-    "    for gene in genes.iterrows():\n",
-    "        og = gene[1].orthogroup\n",
+    "    for generow,gene in genes.iterrows():\n",
+    "        og = gene.orthogroup\n",
     "        \n",
-    "        geneSeqID = gene[1].sequenceID\n",
+    "        geneSeqID = gene.sequenceID\n",
     "        if curSeqID != geneSeqID:\n",
     "            curSeqID = geneSeqID\n",
     "        \n",
-    "        atStr = gene[1].AT_str\n",
+    "        atStr = gene.AT_str\n",
     "        if len(atStr[0])>0:\n",
     "            atList = atStr\n",
     "        else:\n",
     "            atList = []\n",
     "        \n",
-    "        geneStart = gene[1].start\n",
-    "        geneEnd = gene[1].end\n",
-    "        geneForward = gene[1].forward\n",
+    "        geneChr = gene.chromosome\n",
+    "        geneStart = gene.start\n",
+    "        geneEnd = gene.end\n",
+    "        geneForward = gene.forward\n",
     "        \n",
     "        if sequences is not None:\n",
     "            if geneForward:\n",
-    "                geneSeq = sequences[geneSeqID][geneStart:geneEnd+1]\n",
+    "                geneSeq = sequences[geneSeqID][geneStart-1:geneEnd]\n",
     "            else:\n",
-    "                geneSeq = inverseSequence(sequences[geneSeqID][geneStart:geneEnd+1])\n",
+    "                geneSeq = inverseSequence(sequences[geneSeqID][geneStart-1:geneEnd])\n",
     "        else:\n",
     "            geneSeq = ''\n",
     "        \n",
     "        if doUS:\n",
     "        \n",
     "            if sequences is not None:\n",
-    "                usSeq = sequences[geneSeqID][prevEnd:geneStart]\n",
+    "                usSeq = sequences[geneSeqID][prevEnd-1:geneStart]\n",
     "            else:\n",
     "                usSeq = ''\n",
     "\n",
@@ -346,7 +377,7 @@
     "\n",
     "            if isUS:\n",
     "                usID = recordSegment(us,segmentIDs,segmentIDToNumDict,usSeq,gfaFile=gfaFile,segmentData=segmentData)\n",
-    "                recordAnnotation(usID,accessionID,geneSeqID,us,[],nodeAnnotation,nodesChr)\n",
+    "                recordAnnotation(usID,accessionID,geneSeqID,geneChr,prevEnd,geneStart-1,us,[],usSeq,nodesMetadata)\n",
     "        \n",
     "        if og not in OGList:\n",
     "            ogID = recordSegment(og,segmentIDs,segmentIDToNumDict,geneSeq,gfaFile=gfaFile,segmentData=segmentData)\n",
@@ -354,7 +385,10 @@
     "        else:\n",
     "            ogID = segmentIDs.index(og)+1\n",
     "        \n",
-    "        recordAnnotation(ogID,accessionID,geneSeqID,og,atList,nodeAnnotation,nodesChr)\n",
+    "        recordAnnotation(ogID,accessionID,geneSeqID,geneChr,geneStart,geneEnd,og,atList,geneSeq,nodesMetadata)\n",
+    "        altPos = genesAll.loc[(genesAll.orthogroup == og) & (genesAll.sequenceID != sequenceID)]\n",
+    "        for altrow,altChrOG in altPos.iterrows():\n",
+    "            recordAltChr(ogID,accessionID,altChrOG.chromosome,altChrOG.start,altChrOG.end,nodesMetadata)\n",
     "        \n",
     "        pathAdd = [f'{ogID}{\"+\" if geneForward else \"-\"}']\n",
     "        if doUS and isUS:\n",
@@ -381,14 +415,14 @@
     "    if doUS:\n",
     "        \n",
     "        if sequences is not None:\n",
-    "            usSeq = sequences[curSeqID][prevEnd:]\n",
+    "            usSeq = sequences[curSeqID][prevEnd-1:]\n",
     "        else:\n",
     "            usSeq = ''\n",
     "\n",
     "        if len(usSeq)>0:\n",
     "            us = f'US{usCounter:07d}'\n",
     "            usID = recordSegment(us,segmentIDs,segmentIDToNumDict,usSeq,gfaFile=gfaFile,segmentData=segmentData)\n",
-    "            recordAnnotation(usID,accessionID,geneSeqID,us,[],nodeAnnotation,nodesChr)\n",
+    "            recordAnnotation(usID,accessionID,geneSeqID,prevEnd,len(sequences[curSeqID]),us,[],nodesMetadata)\n",
     "            usCounter += 1\n",
     "            path.append(f'{usID}+')\n",
     "            cigar.append('0M')\n",
