--- a/05_exportDev.ipynb
+++ b/05_exportDev.ipynb
@@ -823,6 +823,9 @@
     "    annotationNames = {}\n",
     "    \n",
     "    combAnnotation = {}\n",
+    "    combGenPos = {}\n",
+    "    combGenPosSearch = {}\n",
+    "    combAltChrGenPos = {}\n",
     "    annFirstBin = 0\n",
     "#     breakComponentWhenBinEnds = False\n",
     "#         breakCompBeforeBin = False\n",
@@ -846,12 +849,17 @@
     "        nodeStat(nodeIdx,pathNodeArray,nodeLengths)\n",
     "        \n",
     "        # Combining annotations\n",
-    "        for accID,accNodeAnn in graph.nodesAnnotation[nodeIdx-1].items():    \n",
-    "            for annString,intervals in accNodeAnn.items():\n",
+    "        for accID,accNodeAnn in graph.nodesMetadata[nodeIdx-1].items():    \n",
+    "            for annString,intervals in accNodeAnn['annotation'].items():\n",
     "                for interval in intervals:\n",
     "                    combAnnotation.setdefault(accID,{}).\\\n",
     "                    setdefault(annString,[]).\\\n",
     "                    append((interval[0]+annFirstBin,interval[1]+annFirstBin))\n",
+    "            for genPos in accNodeAnn.get('genPos',[]):\n",
+    "                combGenPos.setdefault(accID,{})[f'{genPos[\"chr\"]}:{\"..\".join(map(str,genPos[\"genomePosition\"]))}']=[(annFirstBin,annFirstBin+nodeLengths[nodeIdx-1]-1)]\n",
+    "                combGenPosSearch.setdefault(accID,{})[annFirstBin] = [genPos[\"genomePosition\"]]\n",
+    "            for altGenPos in accNodeAnn.get('altChrGenPos',[]):\n",
+    "                combAltChrGenPos.setdefault(accID,{})[f'{altGenPos[\"chr\"]}:{\"..\".join(map(str,altGenPos[\"genomePosition\"]))}']=[(annFirstBin,annFirstBin+nodeLengths[nodeIdx-1]-1)]\n",
     "        annFirstBin +=nodeLengths[nodeIdx-1]\n",
     "        \n",
     "        # Check whether the component should be broken before and/or after current node\n",
@@ -1142,11 +1150,11 @@
     "            componentLengths,\n",
     "            components,\n",
     "            componentNucleotides,\n",
-    "            fromLinks,toLinks,\n",
-    "            fromComponentLinks,toComponentLinks,\n",
-    "            accStarts,accEnds,\n",
-    "            invertedStarts,invertedEnds,\n",
-    "            combAnnotation)"
+    "            fromLinks, toLinks,\n",
+    "            fromComponentLinks, toComponentLinks,\n",
+    "            accStarts, accEnds,\n",
+    "            invertedStarts, invertedEnds,\n",
+    "            combAnnotation, combGenPos, combAltChrGenPos, combGenPosSearch)"
    ]
   },
   {
@@ -5006,10 +5014,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
-    "def searchIndicesGeneRecord(redisConn,redisCaseID,geneMapping):\n",
+    "#| export\n",
+    "def searchIndicesGeneRecord(redisConn,redisCaseID,geneMapping,genPosMapping,altChrGenPosMapping,genPosSearchMapping):\n",
     "    for pathID,geneMappingPath in geneMapping.items():\n",
-    "        iset_add(redisConn,f'{redisCaseID}.{pathID}.Gene',geneMappingPath)"
+    "        iset_add(redisConn,f'{redisCaseID}.{pathID}.Gene',geneMappingPath)\n",
+    "    for pathID,genPosMappingPath in genPosMapping.items():\n",
+    "        iset_add(redisConn,f'{redisCaseID}.{pathID}.GenPos',genPosMappingPath)\n",
+    "    for pathID,genPosSearchMappingPath in genPosSearchMapping.items():\n",
+    "        iset_add(redisConn,f'{redisCaseID}.{pathID}.GenPosSearch',genPosSearchMappingPath)\n",
+    "    for pathID,altChrGenPosMappingPath in altChrGenPosMapping.items():\n",
+    "        iset_add(redisConn,f'{redisCaseID}.{pathID}.AltChrGenPos',altChrGenPosMappingPath)"
    ]
   },
   {
@@ -5115,7 +5129,7 @@
     "    fromComponentLinks,toComponentLinks,\n",
     "    accStarts,accEnds,\n",
     "    invertedStarts,invertedEnds,\n",
-    "    combAnnotation] = baseLayerZoom(graph,\n",
+    "    combAnnotation,combGenPos,combAltChrGenPos,combGenPosSearch] = baseLayerZoom(graph,\n",
     "                                      outputPath,outputName,\n",
     "                                      pathNodeArray,pathDirArray,\n",
     "                                      pathLengths,nodeLengths,\n",
@@ -5132,7 +5146,7 @@
     "                                1)\n",
     "    \n",
     "    if redisConn is not None:\n",
-    "        searchIndicesGeneRecord(redisConn,outputName,combAnnotation)\n",
+    "        searchIndicesGeneRecord(redisConn,outputName,combAnnotation,combGenPos,combAltChrGenPos, combGenPosSearch)\n",
     "    \n",
     "    fromComponentLinks,toComponentLinks, \\\n",
     "    linkLengths,pairedLinks,interconnectedLinks,blockEdges = \\\n",
