Not calculating zoom link length and other metrics if only zoom 1 is required.

--- a/05_exportDev.ipynb
+++ b/05_exportDev.ipynb
@@ -1368,6 +1368,8 @@
     "        This should be controlled in link removal routine.\n",
     "    \n",
     "    '''\n",
+    "    if linkLengths is None or pairedLinks is None or interconnectedLinks is None or blockEdges is None:\n",
+    "        return None,None,None,None\n",
     "    processedLinks = {}\n",
     "    print('Converting link to block lengths associations')\n",
     "    linkLengthsConv = {}\n",
@@ -1435,11 +1437,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def nodeToComponentLinks(components,componentToNode,nodeToComponent,\n",
     "                         fromLinks,toLinks,graph,\n",
     "                         fromComponentLinks,toComponentLinks,\n",
-    "                         linkLengths,pairedLinks,interconnectedLinks,blockEdges,\n",
+    "                         linkLengths=None,pairedLinks=None,interconnectedLinks=None,blockEdges=None,\n",
     "                         debug=False):\n",
     "    numComps = len(components)\n",
     "    numCompsDigits = np.int(np.ceil(np.log10(numComps)))\n",
@@ -1448,7 +1450,7 @@
     "        if debug:    \n",
     "            print(f'Processing component links {compNum+1:0{numCompsDigits}}/{numComps:0{numCompsDigits}}')\n",
     "        else:\n",
-    "            print(f'\\nProcessing component links {compNum+1:0{numCompsDigits}}/{numComps:0{numCompsDigits}}',end='')\n",
+    "            print(f'\\rProcessing component links {compNum+1:0{numCompsDigits}}/{numComps:0{numCompsDigits}}',end='')\n",
     "\n",
     "        component = components[compNum]\n",
     "        \n",
@@ -2503,6 +2505,43 @@
     "    blockEdges = identifyRearrangementBlocks(nodesStructure,nodeLengths)\n",
     "    \n",
     "    return linkLengths,pairedLinks,interconnectedLinks,blockEdges,pathNodeInversionRate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8f7476e-a0fd-4c65-83f0-aa84a421ec9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def getBlockEdges(graph = None,\n",
+    "                   nodeLengths=None, pathLengths = None, \n",
+    "                   pathNodeArray = None, pathDirArray = None,\n",
+    "                   pathNextNode = None, forwardLinks = None,\n",
+    "                   inversionThreshold=0.5):\n",
+    "    # initialising main data structures\n",
+    "\n",
+    "    # I would rather get ready graph structure\n",
+    "    # graph = GenomeGraph(gfaPath=f'{fileDir}{os.path.sep}{filename}',isGFASeq=False)\n",
+    "\n",
+    "    # Preparing paths for link-block identifications\n",
+    "    \n",
+    "    if nodeLengths is None or pathLengths is None or pathNodeArray is None or pathDirArray is None and pathNextNode is not None or forwardLinks is None:\n",
+    "        if graph is not None:\n",
+    "            forwardLinks = graph.forwardLinks\n",
+    "            \n",
+    "            nodeLengths = calcNodeLengths(graph)\n",
+    "\n",
+    "            pathLengths,pathNodeArray,pathNodeLengths,pathDirArray,pathNodeLengthsCum = initialPathAnalysis(graph,nodeLengths)\n",
+    "        else:\n",
+    "            raise AttributeError(f'Either `graph` or `nodeLengths`, `pathLengths`, `pathNodeArray` and `pathDirArray` should be provided.')\n",
+    "\n",
+    "    pathNodeInversionRate,nodesStructure,combinedNodeDirArray = getNodesStructurePathNodeInversionRate(pathNodeArray,pathDirArray,pathLengths,inversionThreshold=inversionThreshold)\n",
+    "    \n",
+    "    blockEdges = identifyRearrangementBlocks(nodesStructure,nodeLengths)\n",
+    "    \n",
+    "    return blockEdges,pathNodeInversionRate"
    ]
   },
   {
@@ -5106,12 +5145,23 @@
     "\n",
     "    pathLengths,pathNodeArray,pathNodeLengths,pathDirArray,pathNodeLengthsCum = initialPathAnalysis(graph,nodeLengths)\n",
     "    \n",
-    "    linkLengths,pairedLinks,interconnectedLinks,blockEdges,pathNodeInversion = \\\n",
-    "                getRemovableStructures(nodeLengths = nodeLengths, pathLengths = pathLengths, \n",
-    "                                       pathNodeArray = pathNodeArray, pathDirArray = pathDirArray,forwardLinks = graph.forwardLinks,\n",
-    "                                       inversionThreshold = inversionThreshold)\n",
+    "    if zoomLevels[0]>1:\n",
+    "        zoomLevels = [1] + zoomLevels\n",
     "    \n",
-    "    if returnDebugData: \n",
+    "    if len(zoomLevels)>1 or fillZoomLevels:\n",
+    "        linkLengths,pairedLinks,interconnectedLinks,blockEdges,pathNodeInversion = \\\n",
+    "                    getRemovableStructures(nodeLengths = nodeLengths, pathLengths = pathLengths, \n",
+    "                                           pathNodeArray = pathNodeArray, pathDirArray = pathDirArray,forwardLinks = graph.forwardLinks,\n",
+    "                                           inversionThreshold = inversionThreshold)\n",
+    "    else:\n",
+    "        linkLengths = None\n",
+    "        pairedLinks = None\n",
+    "        interconnectedLinks = None\n",
+    "        blockEdges,pathNodeInversion = getBlockEdges(nodeLengths = nodeLengths, pathLengths = pathLengths, \n",
+    "                                   pathNodeArray = pathNodeArray, pathDirArray = pathDirArray,forwardLinks = graph.forwardLinks,\n",
+    "                                   inversionThreshold = inversionThreshold)\n",
+    "    \n",
+    "    if returnDebugData:\n",
     "        initialLinkLengths = deepcopy(linkLengths)\n",
     "        initialPairedLinks = deepcopy(pairedLinks)\n",
     "        initialInterconnectedLinks = deepcopy(interconnectedLinks)\n",
